--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.378.0",
     "next": "14.2.3",
+    "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
     "react": "^18",
