--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@prisma/client": "^5.15.0",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
+    "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.2.9",
@@ -33,6 +35,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
+    "prisma": "^5.15.0",
     "tailwindcss": "^3.4.3",
     "typescript": "^5"
   }
