--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-table": "^8.17.3",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "client": "file:",
     "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.378.0",
