--- a/client/package.json
+++ b/client/package.json
@@ -22,8 +22,6 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@tanstack/react-table": "^8.17.3",
     "axios": "^1.7.2",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
     "js-cookie": "^3.0.5",
 
     "@react-three/drei": "^9.106.0",
@@ -43,10 +41,8 @@
 
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
-
-    "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
 
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
