--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.6.0",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -25,6 +26,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "client": "file:",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.9",
@@ -32,8 +34,9 @@
     "lucide-react": "^0.378.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
-    "next-cloudinary": "^6.6.2",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
+    "nookies": "^2.5.2",
     "papaparse": "^5.4.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -44,7 +47,7 @@
     "react-select": "^5.8.2",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
-
+    "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1",
     "three-globe": "^2.31.0",
     "vaul": "^0.9.1",
