--- a/client/package.json
+++ b/client/package.json
@@ -46,6 +46,7 @@
     "react-icons": "^5.2.1",
     "react-select": "^5.8.2",
     "simplex-noise": "^4.0.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1",
