added text editor

--- a/client/package.json
+++ b/client/package.json
@@ -22,11 +22,13 @@
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
     "@tanstack/react-table": "^8.17.3",
+    "@tiptap/extension-underline": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
     "@tiptap/react": "^2.9.1",
     "@tiptap/starter-kit": "^2.9.1",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
     "client": "file:",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
