--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
     "next-cloudinary": "^6.6.2",
     "next-themes": "^0.3.0",
     "papaparse": "^5.4.1",
+    "queue-microtask": "^1.2.3",
     "react": "^18",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18",
