--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "@types/node": "^20.12.8",
     "@types/nodemailer": "^6.4.15",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
@@ -34,6 +35,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/multer": "^1.4.12",
     "@types/pg": "^8.11.6",
     "concurrently": "^8.2.2",
     "nodemon": "^3.1.0",
