--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "client": "file:",
+    "cloudinary": "^2.5.1",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.2.9",
@@ -34,8 +35,9 @@
     "lucide-react": "^0.378.0",
     "mini-svg-data-uri": "^1.4.4",
     "next": "14.2.3",
-    "next-cloudinary": "^6.6.2",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.3.0",
+    "nookies": "^2.5.2",
     "papaparse": "^5.4.1",
     "react": "^18",
     "react-day-picker": "^8.10.1",
@@ -45,6 +47,7 @@
     "react-icons": "^5.2.1",
     "react-select": "^5.8.2",
     "simplex-noise": "^4.0.1",
+    "sonner": "^1.7.0",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.164.1",
