--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.1.5",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.17.3",
     "@tiptap/extension-underline": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
@@ -49,6 +50,7 @@
     "react-hook-form": "^7.51.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-responsive-masonry": "^2.4.1",
     "react-select": "^5.8.2",
     "simplex-noise": "^4.0.1",
     "tailwind-merge": "^2.3.0",
@@ -64,6 +66,8 @@
     "@types/papaparse": "^5.3.14",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-responsive-masonry": "^2.1.3",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.19",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
