--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,10 +1,13 @@
 {
-    "version": 2,
-    "name": "music-album",
-    "builds": [
-       { "src": "dist/index.js", "use": "@vercel/node" }
-    ],
-    "routes": [
-       { "src": "/(.*)", "dest": "dist/index.js" }
-    ]
+   "version": 2,
+   "builds": [
+     {
+       "src": "src/index.ts",
+       "use": "@vercel/node",
+       "config": {
+         "maxDuration": 10
+       }
+     }
+   ]
  }
+ 
