--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -17,7 +17,8 @@ COPY . .
 RUN npm run build
 
 # Expose the desired port (e.g., 3000)
-EXPOSE 3000
+EXPOSE 5050
 
 # Start the application in production mode
+# CMD ["npm", "run", "dev"]
 CMD ["npm", "start"]
