--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
     "@tabler/icons-react": "^3.22.0",
+    "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.17.3",
     "@tiptap/extension-underline": "^2.9.1",
     "@tiptap/pm": "^2.9.1",
