--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,14 @@
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-scroll-area": "^1.2.0",
     "@radix-ui/react-select": "^2.1.2",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-three/drei": "^9.106.0",
     "@react-three/fiber": "^8.16.6",
-    "@tabler/icons-react": "^3.22.0",
+    "@tabler/icons-react": "^3.21.0",
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.17.3",
     "@tiptap/extension-underline": "^2.9.1",
