--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,13 +1,15 @@
 {
-   "version": 2,
-   "builds": [
-     {
-       "src": "src/index.ts",
-       "use": "@vercel/node",
-       "config": {
-         "maxDuration": 10
-       }
-     }
-   ]
- }
- 
+  "version": 2,
+  "builds": [
+    {
+      "src": "index.ts",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "dist/index.js"
+    }
+  ]
+}
